Added class to center text in a block.

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -12,6 +12,7 @@
 // Layout Elements
 @import 'layout/page_header';
 @import 'layout/page_footer';
+@import 'layout/utils';
 
 // Navigation Elements
 @import "elements/navigation";
