--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -18,6 +18,7 @@
 @import "layout/page_header";
 @import "layout/page_content";
 @import "layout/page_footer";
+@import "layout/utils";
 
 // External Libraries
 @import "libs/venobox";
