Fixed name for file upload textboxes
Made it conform to BEM

--- a/scss/elements/_compound_field.scss
+++ b/scss/elements/_compound_field.scss
@@ -21,7 +21,7 @@
 //       </div>
 //       <div class="compoundField-inputs">
 //         <div class="fileUpload input-group compoundField-input" data-for="upload">
-//           <input type="text" class="fileInputText" readonly>
+//           <input type="text" class="fileUpload-text" readonly>
 //           <label class="input-group-btn">
 //               <span class="button buttonFile">
 //                   Browse&hellip; <input type="file" style="display: none;" multiple>
