--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -150,7 +150,7 @@ textarea {
 // <div class="form-group">
 //   <label for="">Change thumbnail</label>
 //   <div class="input-group fileUpload">
-//     <input type="text" class="fileInputText" readonly>
+//     <input type="text" class="fileUpload-text" readonly>
 //     <label class="input-group-btn">
 //         <span class="button buttonFile">
 //             Browse&hellip; <input type="file" style="display: none;" multiple>
@@ -189,7 +189,7 @@ textarea {
   cursor: inherit;
   display: block;
 }
-.fileInputText {
+.fileUpload-text {
   border-radius: $border-radius-base 0 0 $border-radius-base;
   border-right-width: 0;
   background-color: $gray-light;
