--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -208,6 +208,13 @@ textarea {
 // </div>
 //
 // <div class="form-group">
+//   <div class="checkbox">
+//     <input type="checkbox" id="checkbox01" value="" disabled>
+//     <label for="checkbox01"><span class="checkbox-icon"></span> I can haz? (disabled)</label>
+//   </div>
+// </div>
+//
+// <div class="form-group">
 //   <label>What's you're favorite sandwich?</label>
 //   <ul>
 //     <li class="radio">
@@ -219,8 +226,8 @@ textarea {
 //       <label for="radio01"><span class="radio-icon"></span>BLT</label>
 //     </li>
 //     <li class="radio">
-//       <input type="radio" id="radio02" value="sub" name="delete">
-//       <label for="radio02"><span class="radio-icon"></span>Submarine</label>
+//       <input type="radio" id="radio02" value="sub" name="delete" disabled>
+//       <label for="radio02"><span class="radio-icon"></span>Submarine (disabled)</label>
 //     </li>
 //   </ul>
 // </div>
@@ -330,6 +337,12 @@ input:checked + label .checkbox-icon {
     text-align: center;
     color: #fff;
   }
+}
+
+.radio, .checkbox {
+    input:disabled + label, input[disabled] + label {
+        color: $gray-dark;
+    }
 }
 
 // Field errors
