Added checkbox-spacer class
We can use this for things like the member list where we want to not
show the checkbox for a user.

Moved select_list out of the application specific section.

Updated the checkbox/radiobox documentation.

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -41,7 +41,7 @@
 @import 'application/elements/step_list';
 @import 'application/elements/filtered_list';
 @import 'application/elements/video_card';
-@import 'application/elements/select_list';
+@import 'elements/select_list';
 @import 'application/elements/subtitles';
 @import 'application/elements/subtitles_list';
 @import 'application/elements/dialogs';
