--- a/scss/application.scss
+++ b/scss/application.scss
@@ -46,7 +46,7 @@
 @import 'application/elements/subtitles_list';
 @import 'application/elements/dialogs';
 @import 'application/elements/action_bar';
-@import 'application/elements/filters';
+@import 'elements/filters';
 @import 'application/elements/comments';
 @import 'application/elements/pagination';
 @import 'application/elements/hanging_links';
