--- a/scss/elements/_select_list.scss
+++ b/scss/elements/_select_list.scss
@@ -1,7 +1,7 @@
 // Search results / Select List
 //
 // Example:
-// <nav class="nav-actions">
+// <nav class="selectList-actions">
 //   <div class="checkbox">
 //     <input id="styleGuide-selectAll" class="selectAll" type="checkbox" value="" data-target="#styleGuide-selectList">
 //     <label for="styleGuide-selectAll" class="text-gray"><span class="checkbox-icon"></span> Select all</label>
@@ -163,9 +163,11 @@ ul.selectList {
     display: flex;
     flex-direction: row;
     width: 100%;
-    margin-bottom: 30px;
+    padding: 8px;
     color: $gray-dark;
     &:hover {
+      background-color: $gray-lighter;
+
       .context-menu {
         display: block;
       }
@@ -222,8 +224,8 @@ ul.selectList {
   .context-menu {
     display: none;
     position: absolute;
-    top: 0;
-    right: 10px;
+    top: 8px;
+    right: 8px;
     .dropdown-toggle {
       width: 20px;
       height: 20px;
@@ -269,6 +271,25 @@ ul.selectList {
           color: #7e7f80;
         }
       }
+    }
+  }
+}
+
+.selectList-actions {
+  position: relative;
+  padding: 8px;
+  margin-bottom: 8px;
+  .checkbox { display: inline-block; }
+  a, button {
+    margin-left: 15px;
+  }
+}
+
+@media(max-width: 767px) {
+  .selectList-actions {
+    .pull-right {
+      float: none !important;
+      display: block;
     }
   }
 }
