Better way of finding selectlist items
Use an actual class to select them.  This works in cases like the video
managuument page where we use a <table>.

--- a/scss/elements/_select_list.scss
+++ b/scss/elements/_select_list.scss
@@ -8,7 +8,7 @@
 //   </div>
 // </nav>
 // <ul id="styleGuide-selectList" class="selectList" data-target="#styleGuide-selectList-actionBar">
-//   <li class="row condensed">
+//   <li class="row condensed selectList-item">
 //     <div class="checkbox">
 //       <input id="styleGuide_item_1" type="checkbox" class="selectList-checkbox" value="item_1">
 //       <label for="styleGuide_item_1"><span class="checkbox-icon"></span></label>
@@ -47,7 +47,7 @@
 //       <p>Review due in 2 days</p>
 //     </div>
 //   </li>
-//   <li class="row condensed">
+//   <li class="row condensed selectList-item">
 //     <div class="checkbox">
 //       <input id="styleGuide_item_2" type="checkbox" class="selectList-checkbox" value="item_2">
 //       <label for="styleGuide_item_2"><span class="checkbox-icon"></span></label>
@@ -86,7 +86,7 @@
 //       <p>Review due in 2 days</p>
 //     </div>
 //   </li>
-//   <li class="row condensed">
+//   <li class="row condensed selectList-item">
 //     <div class="checkbox">
 //       <input id="styleGuide_item_3" type="checkbox" class="selectList-checkbox" value="item_3">
 //       <label for="styleGuide_item_3"><span class="checkbox-icon"></span></label>
