Updated/merged the global typography CSS
Switched to 16px base font size.

Also fixed a couple random issues I found while inspecting the site
after making these changes.

Added some overrides for text inside selectList.  Let's working this in
pculture/amara-enterprise#1951

Added a new style for the subtitles list on the video page.  Before we
were relying on a mix of bootstrap CSS and our own.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -50,7 +50,7 @@ $sea-green:              #38957c;
 $sea-green-dark:         #2f8665;
 
 $body-bg:                #ffffff;
-$text-color:             #5a2747;
+$text-color:             $gray-darker;
 $brand-primary:          $plum;
 
 $link-color:            $brand-primary;
@@ -58,6 +58,9 @@ $link-hover-color:      darken($link-color, 15%);
 
 $font-family-sans-serif:  'Open Sans', sans-serif;
 $headings-font-family:    'Raleway', sans-serif;
+$font-size-normal: 16px;
+$font-size-small: 14px;
+$font-size-tiny: 13px;
 
 
 // Animations
