--- a/scss/application.scss
+++ b/scss/application.scss
@@ -21,7 +21,7 @@
 
 // Global
 @import 'application/global/base';
-@import 'application/global/typography';
+@import 'base/typography';
 @import 'application/global/grid';
 
 @import 'application/global/buttons';
@@ -57,6 +57,7 @@
 @import 'elements/select';
 @import "elements/alerts";
 @import 'elements/tables';
+@import 'elements/video-subtitles-list';
 
 // Views
 @import 'application/views/style_guide';
