--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,13 +1,77 @@
-h1, h2, h3, h4, h5, h6 {
+// Typography
+// 
+// Amara uses two typefaces:
+//   - Raleway: Used for titling.  Provides the clear messaging of a sans
+//     serif, but with a subtle, accessible playfulness.  We use Raleway
+//     sparingly, by default only H1 tags have it.  But you can use it for any
+//     element with the .text-raleway class.
+//   - Open sans: Used for subheaders and body copy, open sans provides a more precise counterpoint to Raleway’s unconventional nature, and champions readability, especially in smaller point sizes.
+//
+// Font size for body text:
+//
+//   - base: 16px
+//   - small: 14px (less prominent elemens like filter fields)
+//   - tiny: 13px (help text, and other fine print)
+//
+//  Use the .small or .tiny classes to change the font size
+// 
+// <h3><em>Titling</em></h3>
+// <h1>Raleway</h1>
+// <h1>ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxy<br>
+// 0123456789</h1>
+// <hr>
+// <h3><em>Sub-headers, CTAs & body copy</em></h3>
+// <h1 class="type-open-sans">Open Sans</h1>
+// <h1 class="type-open-sans">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz<br>0123456789</h1>
+// <hr>
+// <h1><em>Usage</em></h1>
+// 
+// Example:
+// <h1>h1. Amara heading</h1>
+// <h2>h2. Amara heading</h2>
+// <h3>h3. Amara heading</h3>
+// <h4>h4. Amara heading</h4>
+// <h5>h5. Amara heading</h5>
+//
+// Styleguide typography
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: $font-family-sans-serif;
+  line-height: 1.4;
+  font-size: $font-size-normal;
+  color: $text-color;
+}
+
+h1, .text-raleway {
   font-family: $headings-font-family;
-  color: $brand-primary;
+}
+
+
+h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
+  color: inherit;
+  line-height: 1.25;
+  margin: 0;
+  .number {
+    font-family: $font-family-sans-serif;
+  }
 }
 
 h1, .h1 { font-size: 45px; margin-bottom: 20px; }
-h2, .h2 { font-size: 25px; }
-h3, .h3 { font-size: 20px; font-weight: 700; }
-h4, .h4 { font-size: 17px; }
+h2, .h2 { font-size: 25px; margin-bottom: 12px; }
+h3, .h3 { font-size: 20px; font-weight: 700; margin-bottom: 4px; }
+h4, .h4 { font-size: 17px; font-weight: 700; }
+h5, .h5 { font-size: 16px; font-weight: 700; }
+
+small, .small {
+  font-size: $font-size-small;
+}
+
+.tiny {
+  font-size: $font-size-tiny;
+}
 
 em {
 
