--- a/scss/elements/_forms.scss
+++ b/scss/elements/_forms.scss
@@ -83,7 +83,6 @@ label {
   display: block;
   max-width: 100%;
   margin-bottom: 0;
-  font-size: 14px;
   font-weight: 600;
   color: $gray-darker;
 }
@@ -107,7 +106,6 @@ textarea {
   border: 1px solid $silver;
   border-radius: $border-radius-base;
   background-color: #fff;
-  font-size: 14px;
   color: $gray-darker;
   &:focus {
     outline: none;
@@ -170,7 +168,7 @@ textarea {
   padding: 8px 10px;
   line-height: 21px;
   margin: 0;
-  font-size: 12px;
+  font-size: $font-size-small;
   font-weight: 400;
   background-color: $teal;
 }
@@ -282,7 +280,6 @@ textarea {
   }
   label {
     min-height: 20px;
-    font-size: 14px;
     padding-left: 0px;
     margin-bottom: 0;
     font-weight: normal;
@@ -404,7 +401,7 @@ input:checked + label .checkbox-icon {
 .helpBlock {
   display: block;
   margin-top: 4px;
-  font-size: 13px;
+  font-size: $font-size-tiny;
   color: $gray-darker;
 }
 
@@ -415,7 +412,7 @@ input:checked + label .checkbox-icon {
 
 .helpList {
   margin-left: 24px;
-  font-size: 13px;
+  font-size: $font-size-tiny;
   color: $gray-darker;
   list-style-type: disc;
   list-style-position: inside;
@@ -478,7 +475,7 @@ legend {
 
 .fieldsetHelpBlock {
   margin-top: -8px;
-  font-size: 13px;
+  font-size: $font-size-tiny;
   color: $gray-darker;
   margin-bottom: 16px;
   font-style: italic;
