--- a/scss/elements/_select.scss
+++ b/scss/elements/_select.scss
@@ -105,6 +105,7 @@ select.select {
 
   &.selectFilter .select2-selection {
     border-radius: 4px;
+    font-size: $font-size-small;
     background-color: transparent;
     border: 1px solid transparent;
     padding: 6px 40px 6px 8px;
