--- a/scss/elements/_alerts.scss
+++ b/scss/elements/_alerts.scss
@@ -24,7 +24,7 @@
   padding: 15px;
   margin-bottom: 12px;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 0;
   &.alert-success {
     background-image: none;
     background-color: $state-success-bg;
