Reorganized color code
Moved bg-* styles into their own CSS module and shared that between the
app and marketing CSS.

Put the styleguide section there too and updated it a bit.

Updated the styles for color styleguide section

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -22,6 +22,7 @@
 // Global
 @import 'application/global/base';
 @import 'base/typography';
+@import 'base/colors';
 @import 'application/global/grid';
 
 @import 'application/global/buttons';
