--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -12,7 +12,7 @@
 @import "base/global";
 @import "base/typography";
 @import "base/font_icons";
-
+@import 'base/colors';
 
 // Import layout / global styles
 @import "layout/page_header";
