--- a/scss/application/global/_base.scss
+++ b/scss/application/global/_base.scss
@@ -28,7 +28,7 @@ a {
   &:hover,
   &:focus,
   &:active {
-    color: darken($teal, 10%);
+    color: $lime;
     outline: none;
     text-decoration: none;
   }
