--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -46,39 +46,23 @@ button {
   background-color: $gray;
   color: #fff;
   @include transition(0.4s);
-  &:hover, &:focus, &:visited {
-    background-color: $gray-dark;
+  &:focus, &:visited {
     color: #fff;
   }
   &.button-plum {
     background-color: $plum !important;
-    &:hover {
-      background-color: $amaranth !important;
-    }
   }
   &.button-amaranth {
     background-color: $amaranth !important;
-    &:hover {
-      background-color: $plum !important;
-    }
   }
   &.button-lime {
     background-color: $lime !important;
-    &:hover {
-      background-color: $teal !important;
-    }
   }
   &.button-teal {
     background-color: $teal !important;
-    &:hover {
-      background-color: $lime !important;
-    }
   }
   &.button-gray {
     background-color: $gray !important;
-    &:hover {
-      background-color: $plum !important;
-    }
   }
   &.button-transparent {
     background-color: transparent;
@@ -88,6 +72,9 @@ button {
     &:hover {
       color: $lime;
     }
+  }
+  &:hover {
+    background-color: $lime !important;
   }
   &.button-block {
     display: block;
