Updated header styles a bit

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -59,11 +59,34 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-h1, .h1 { font-size: 45px; margin-bottom: 20px; }
-h2, .h2 { font-size: 25px; margin-bottom: 12px; }
-h3, .h3 { font-size: 20px; font-weight: 700; margin-bottom: 4px; }
-h4, .h4 { font-size: 17px; font-weight: 700; }
-h5, .h5 { font-size: 16px; font-weight: 700; }
+h1, .h1 {
+  font-size: 36px;
+  margin-bottom: 8px;
+}
+
+h2, .h2 {
+  font-size: 24px;
+  margin-bottom: 8px;
+}
+
+h3, .h3 {
+  font-size: 20px;
+  margin-bottom: 4px;
+}
+
+h4, .h4 {
+  font-size: 16px;
+}
+
+.mega {
+  font-size: 72px;
+  margin-bottom: 18px;
+}
+
+.jumbo {
+  font-size: 45px;
+  margin-bottom: 12px;
+}
 
 small, .small {
   font-size: $font-size-small;
