--- a/scss/application.scss
+++ b/scss/application.scss
@@ -5,6 +5,7 @@
 @import "bootstrap/bootstrap.min";
 // Utils
 @import 'variables';
+@import 'functions';
 @import 'mixins';
 @import 'base/font_icons';
 @import 'application/utils';
