--- a/scss/application/global/_navs.scss
+++ b/scss/application/global/_navs.scss
@@ -30,7 +30,7 @@
         font-family: 'amara';
         content: "\e90c";
         font-size: 17px;
-        color: $turquoise;
+        color: $teal;
       }
     }
   }
