--- a/scss/marketing.scss
+++ b/scss/marketing.scss
@@ -4,6 +4,7 @@
 @import "../node_modules/select2/dist/css/select2";
 
 @import "variables";
+@import 'functions';
 @import "mixins";
 @import "utilities";
 @import "animations";
