--- a/scss/application/global/_tabs.scss
+++ b/scss/application/global/_tabs.scss
@@ -52,7 +52,7 @@ ul.nav-tabs {
         font-weight: 600;
         background-color: transparent;
         &:hover, &:focus, &:active {
-          color: $turquoise;
+          color: $teal;
           font-weight: 600;
           border: none;
           border-bottom: 2px solid $teal;
