--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -4,10 +4,9 @@
 //   <li class="bg-plum"><span>Plum</span></li>
 //   <li class="bg-teal">Teal</li>
 //   <li class="bg-amaranth">Amaranth</li>
-//   <li class="bg-turquoise">Turquoise</li>
 //   <li class="bg-lime">Lime</li>
 //   <li class="bg-sea-green">Sea Green</li>
-//   <li class="bg-sea-green-dark">Sea Green Dark</li>
+//   <li class="bg-cream">Cream</li>
 // </ul>
 // <ul class="colorGrid">
 //   <li class="bg-gray-darker">Gray Darker</li>
@@ -16,7 +15,6 @@
 //   <li class="bg-silver">Silver</li>
 //   <li class="bg-gray-light">Gray Light</li>
 //   <li class="bg-gray-lighter">Gray Lighter</li>
-//   <li class="bg-cream">Cream</li>
 // </ul>
 // 
 // 
@@ -27,78 +25,43 @@
 //  <li>Use `teal` for other actionable elements like links and CTAs.  This allows these elements to stand out</li>
 //  <li>Use `lime` for the active/hover state on clickable elements.  "Green means go"</li>
 //  <li>Use other colors for aesthetic purposes, when needed</li>
+//  <li>Use the `.bg-[color]` class to set the background color
+//  <li>Use the `.text-[color]` class to set the text color
+//  <li>Use [color]-light or [color]-dark to get a lighter/darker version of a color
 // </ul>
 // 
 // Styleguide palette
 
+@each $name, $color_info in $colorscheme {
+  $color: nth($color_info, 1);
+  $alternate: nth($color_info, 2);
 
-.bg-lime {
-  @include palette($lime, $white);
-}
+  .bg-#{$name} {
+    @include palette($color, $alternate);
+  }
 
-.bg-teal {
-  @include palette($teal, $white);
-}
+  .bg-#{$name}-dark {
+    @include palette(dark($color), $alternate);
+  }
 
-.bg-amaranth {
-  @include palette($amaranth, $white);
-}
+  .bg-#{$name}-light {
+    @include palette(light($color), $alternate);
+  }
 
-.bg-plum {
-  @include palette($plum, $white);
-  &.gradient {
-    background-image: linear-gradient(#872648, #592746);
+  .text-#{$name} {
+    color: $color !important;
   }
 }
 
-.bg-cream {
-  @include palette($cream, $plum);
+// TODO standardize gradient code
+.bg-plum.gradient {
+  background-image: linear-gradient(#872648, #592746);
 }
-
-.bg-gray-darker {
-  @include palette($gray-darker, $white);
+.bg-sea-green.gradient {
+  background-image: linear-gradient(#468e43, #389873);
 }
-
-.bg-gray-dark {
-  @include palette($gray-dark, $white);
-}
-
-.bg-gray {
-  @include palette($gray, $white);
-}
-
-.bg-silver {
-  @include palette($silver, $white);
-}
-
-.bg-gray-light {
-  @include palette($gray-light, $plum);
-}
-
-.bg-gray-lighter {
-  @include palette($gray-lighter, $plum);
-}
-
-.bg-white {
-  @include palette($white, $gray);
-}
-
-.bg-turquoise {
-  @include palette($turquoise, $white);
-}
-
-.bg-sea-green {
-  @include palette($sea-green, $white);
-  &.gradient {
-    background-image: linear-gradient(#468e43, #389873);
-  }
-}
-
-.bg-sea-green-dark {
-  @include palette($sea-green-dark, $white);
-  &.gradient {
-    background-image: linear-gradient(#2f8665, #0f573c);
-  }
+.bg-sea-green-dark.gradient {
+  background-image: linear-gradient(#2f8665, #0f573c);
 }
 
 .bg-overlay {
@@ -115,10 +78,3 @@
     background-size: cover;
   }
 }
-
-.text-white { color: $white !important; }
-.text-plum { color: $plum !important; }
-.text-lime { color: $lime !important; }
-.text-teal { color: $teal !important; }
-.text-amaranth { color: $amaranth !important; }
-.text-cream { color: $cream !important; }
